[gd_scene load_steps=14 format=3 uid="uid://1r54o3uo04vm"]

[ext_resource type="Texture2D" uid="uid://wi4qmpmkigos" path="res://assets/graphics/titlescreen.png" id="1_mgcf3"]
[ext_resource type="Script" path="res://scene/menus/mainmenu.gd" id="1_rynt0"]
[ext_resource type="Texture2D" uid="uid://8mehat7rt4he" path="res://assets/graphics/placeholder_titlescreen.jpg" id="2_0aybv"]
[ext_resource type="PackedScene" uid="uid://dc4dp6mlsimxo" path="res://scene/menus/newgame.tscn" id="3_os162"]
[ext_resource type="PackedScene" uid="uid://ormgbvgat7ix" path="res://scene/menus/settings.tscn" id="3_pluqi"]
[ext_resource type="PackedScene" uid="uid://y50tqx50niub" path="res://scene/menus/loadgame.tscn" id="4_n6pvk"]
[ext_resource type="PackedScene" uid="uid://1xaxrqk7a7rg" path="res://scene/menus/help.tscn" id="6_0sc3y"]
[ext_resource type="PackedScene" uid="uid://biratu1kw11v1" path="res://scene/menus/about.tscn" id="7_exvcy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cuvy4"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jhdo0"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ojpe"]
bg_color = Color(0.6, 0.6, 0.6, 0)
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rho3w"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="Theme" id="Theme_nv38r"]
Button/colors/font_focus_color = Color(0.666667, 0, 0, 1)
Button/colors/font_hover_color = Color(0.666667, 0, 0, 1)
Button/colors/font_hover_pressed_color = Color(0.666667, 0, 0, 1)
Button/colors/font_pressed_color = Color(0.666667, 0, 0, 1)
Button/styles/focus = SubResource("StyleBoxFlat_cuvy4")
Button/styles/hover = SubResource("StyleBoxFlat_jhdo0")
Button/styles/normal = SubResource("StyleBoxFlat_6ojpe")
Button/styles/pressed = SubResource("StyleBoxFlat_rho3w")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rynt0")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 4571.0
offset_bottom = 2571.0
scale = Vector2(0.42, 0.42)
texture = ExtResource("2_0aybv")

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 2
offset_right = 40.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_mgcf3")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 138.0
offset_top = 488.0
offset_right = 690.0
offset_bottom = 956.0
theme = SubResource("Theme_nv38r")
theme_override_constants/v_separation = 0

[node name="NewGame" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 49
text = "New Game"

[node name="LoadGame" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 49
text = "Load Game"

[node name="Settings" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 49
text = "Settings"

[node name="Help" type="Button" parent="GridContainer"]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 49
text = "Help"

[node name="About" type="Button" parent="GridContainer"]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 49
text = "About"

[node name="Exit" type="Button" parent="GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 49
text = "Exit"

[node name="NewGame" parent="." instance=ExtResource("3_os162")]
visible = false
layout_mode = 1

[node name="LoadGame" parent="." instance=ExtResource("4_n6pvk")]
visible = false
layout_mode = 1

[node name="Settings" parent="." instance=ExtResource("3_pluqi")]
visible = false
layout_mode = 1

[node name="Help" parent="." instance=ExtResource("6_0sc3y")]
visible = false
layout_mode = 1

[node name="About" parent="." instance=ExtResource("7_exvcy")]
visible = false
layout_mode = 1

[connection signal="pressed" from="GridContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="GridContainer/LoadGame" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="GridContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="GridContainer/Help" to="." method="_on_help_pressed"]
[connection signal="pressed" from="GridContainer/About" to="." method="_on_about_pressed"]
[connection signal="pressed" from="GridContainer/Exit" to="." method="_on_exit_pressed"]
